service/errors.txt
    Checking self_monitor_service v0.1.0 (C:\dev\self_monitor\service)
error[E0432]: unresolved imports `windows::Win32::UI::WindowsAndMessaging::GetLastInputInfo`, `windows::Win32::UI::WindowsAndMessaging::LASTINPUTINFO`
 --> src\main.rs:6:5
  |
6 |     GetLastInputInfo, LASTINPUTINFO,
  |     ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^ no `LASTINPUTINFO` in `Win32::UI::WindowsAndMessaging`
  |     |
  |     no `GetLastInputInfo` in `Win32::UI::WindowsAndMessaging`

error[E0432]: unresolved import `rusqlite::CONNECTION`
 --> src\main.rs:8:5
  |
8 | use rusqlite::CONNECTION; // Note: We will use Connection not CONNECTION
  |     ^^^^^^^^^^----------
  |     |         |
  |     |         help: a similar name exists in the module: `Connection`
  |     no `CONNECTION` in the root

error[E0432]: unresolved imports `windows::Win32::UI::WindowsAndMessaging::GetLastInputInfo`, `windows::Win32::UI::WindowsAndMessaging::LASTINPUTINFO`
 --> src\tracker.rs:4:5
  |
4 |     GetLastInputInfo, LASTINPUTINFO,
  |     ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^ no `LASTINPUTINFO` in `Win32::UI::WindowsAndMessaging`
  |     |
  |     no `GetLastInputInfo` in `Win32::UI::WindowsAndMessaging`
  |
  = help: consider importing this unresolved item through its public re-export instead:
          crate::GetLastInputInfo
  = help: consider importing this unresolved item through its public re-export instead:
          crate::LASTINPUTINFO

warning: unused imports: `BOOL`, `HWND`, and `POINT`
 --> src\main.rs:3:34
  |
3 | use windows::Win32::Foundation::{BOOL, HWND, POINT};
  |                                  ^^^^  ^^^^  ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `GetForegroundWindow`, `GetWindowTextW`, and `GetWindowThreadProcessId`
 --> src\main.rs:5:5
  |
5 |     GetForegroundWindow, GetWindowThreadProcessId, GetWindowTextW,
  |     ^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^

warning: unused import: `HWND`
 --> src\tracker.rs:1:34
  |
1 | use windows::Win32::Foundation::{HWND};
  |                                  ^^^^

For more information about this error, try `rustc --explain E0432`.
warning: `self_monitor_service` (bin "self_monitor_service") generated 3 warnings
error: could not compile `self_monitor_service` (bin "self_monitor_service") due to 3 previous errors; 3 warnings emitted
